--- a/example/src/App.css
+++ b/example/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #081229;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
