--- a/example/src/App.css
+++ b/example/src/App.css
@@ -22,6 +22,17 @@
   color: #61dafb;
 }
 
+.App-slider {
+  padding: 50px 20px 20px;
+  width: 90%;
+}
+
+@media (min-width: 769px) {
+  .App-slider {
+    width: 50%;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
