--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #081229;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -8,7 +10,6 @@
 }
 
 .App-header {
-  background-color: #081229;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,6 +19,16 @@
   color: white;
 }
 
+.App-header h1 {
+  font-size: 19px;
+}
+
+.App-header h3 {
+  font-weight: 300;
+  font-size: 14px;
+  margin-top: -5px;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -25,11 +36,67 @@
 .App-slider {
   padding: 50px 20px 20px;
   width: 90%;
+  text-align: left;
+  font-size: 14px;
+  max-width: 800px;
 }
 
-@media (min-width: 769px) {
+.Github {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.GithubStar {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+@media (min-width: 375px) {
+  .App-header h1 {
+    font-size: 23px;
+  }
+
+  .App-header h3 {
+    font-size: 16px;
+  }
+
+  .Github {
+    top: 20px;
+    right: 20px;
+  }
+
+  .GithubStar {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+}
+
+@media (min-width: 768px) {
   .App-slider {
-    width: 50%;
+    width: 80%;
+  }
+
+  .App-header h1 {
+    font-size: 35px;
+  }
+
+  .App-header h3 {
+    font-size: 24px;
+  }
+
+  .Github {
+    top: 20px;
+    right: 20px;
+  }
+
+  .App-slider {
+    font-size: 20px;
   }
 }
 
