--- a/example/src/App.css
+++ b/example/src/App.css
@@ -21,6 +21,7 @@
 
 .App-header h1 {
   font-size: 19px;
+  margin-top: 100px;
 }
 
 .App-header h3 {
@@ -34,11 +35,15 @@
 }
 
 .App-slider {
-  padding: 50px 20px 20px;
+  padding: 10px 20px 20px;
   width: 90%;
   text-align: left;
   font-size: 14px;
   max-width: 800px;
+}
+
+.App-slider p {
+  margin-top: 50px;
 }
 
 .Github {
